# solo5-frt-rt1176-m7

./: .gitmodules  BUILD.md  FreeRTOSConfig.h  GNUmakefile  LICENSE  Makefile.board  Makefile.common  Makefile.driver  Makefile.freertos  Makefile.lib_common  Makefile.lwip  Makefile.soc  Makefile.solo5_frt  README.md  install.sh  lwipopts.h  platform_binding.h  platform_tender.h  solo5-frt-rt1176-m7.opam  solo5_frt.lds  uninstall.sh
frt/: platform_rt1176_binding.c  platform_rt1176_tender.c
rt1170_evk/: board_solo5.c
